@@ -16,12 +16,6 @@ to be updated, please send an email to
 <a href="mailto:fvwm-workers@fvwm.org">fvwm-workers</a>.
 
 <h2><font color="cyan">Corporate contributors</font></h2>
-<a href="http://www.parasoft.com/">ParaSoft&reg;</a>
-has supplied 2 of our developers with free copies of its profiling tool
-<a href="http://www.parasoft.com/products/insure/">Insure++&reg;</a>.
-We use Insure++ as part of our testing process to help identify
-memory leaks, memory corruption, and other problems.
-<b>Thanks ParaSoft.</b>
 <hr>
 
 </body>
