@@ -1,3 +1,8 @@
+2003-03-11  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* xxxacknowledgements.html:
+	removed "thank you" for a contribution that was never made
+
 2003-03-11  Mikhael Goikhman  <migo@homemail.com>
 
 	* generated/manpages/*:
